3948.	[port]		solaris: RCVBUFSIZE was too large on Solaris with
			--with-tuning=large. [RT #37059]

	--- 9.10.1rc2 released ---

3947.	[cleanup]	Set the executable bit on libraries when using
			libtool. [RT #36786]

3946.	[cleanup]	Improved "configure" search for a python interpreter.
			[RT #36992]

3945.	[bug]		Invalid wildcard expansions could be incorrectly
			accepted by the validator. [RT #37093]

3944.	[test]		Added a regression test for "server-id". [RT #37057]

3942.	[bug]		Wildcard responses from a optout range should be
			marked as insecure. [RT #37072]

3941.	[doc]		Include the BIND version number in the ARM. [RT #37067]

	--- 9.10.1rc1 released ---

3935.	[bug]		"geoip asnum" ACL elements would not match unless
			the full organization name was specified.  They
			can now match against the AS number alone (e.g.,
			AS1234). [RT #36945]

3934.	[bug]		Catch bad 'sit-secret' in named-checkconf.  Improve
			sit-secret documentation. [RT #36980]

3933.	[bug]		Corrected the implementation of dns_rdata_casecompare()
			for the HIP rdata type.  [RT #36911]

3932.	[test]		Improved named-checkconf tests. [RT #36911]

3931.	[cleanup]	Cleanup how dlz grammar is defined. [RT #36879]

3929.	[bug]		'host -a' needed to clear idnoptions. [RT #36963]

3928.	[test]		Improve rndc system test. [RT #36898]

3927.	[bug]		dig: report PKCS#11 error codes correctly when
			compiled with --enable-native-pkcs11. [RT #36956]

3926.	[doc]		Added doc for geoip-directory. [RT #36877]

3925.	[bug]		DS lookup of RFC 1918 empty zones failed. [RT #36917]

3924.	[bug]		Improve 'rndc addzone' error reporting. [RT #35187]

3923.	[bug]		Sanity check the xml2-config output. [RT #22246]

3922.	[bug]		When resigning, dnssec-signzone was removing
			all signatures from delegation nodes. It now
			retains	DS and (if applicable) NSEC signatures.
			[RT #36946]

3921.	[bug]		AD was inappropriately set on RPZ responses. [RT #36833]
