@@ -1,3 +1,6 @@
+3950.	[port]		Changed the bin/python Makefile to work around a
+			bmake bug in FreeBSD 10 and NetBSD 6. [RT #36993]
+
 3948.	[port]		solaris: RCVBUFSIZE was too large on Solaris with
 			--with-tuning=large. [RT #37059]
 
